--- a/modulo1/html-sistema-loja/template-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/template-loja/funcionarios.html
@@ -6,30 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
 </head>
+<link rel="stylesheet" type="text/css" href="/estilização.css">
 <body>
     <header>
-        <p>Nome da loja</p>
+        <div class="subt">
+            <p>Loja do Pétrick</p>
+        </div>
     </header>
     
     <nav>
-        <a href="index.html">Página Inicial |</a>
-        <a href="ctrl-estoque.html">Controle de Estoque |</a>
-        <a href="add-produto.html">Adicionar Produto |</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <div class="link1"><a href="index.html">Página Inicial |</a>
+            <a href="ctrl-estoque.html">Controle de Estoque |</a>
+        </div>
+        <div class="link2"><a href="add-produto.html">Adicionar Produto |</a>
+            <a href="funcionarios.html">Funcionários</a></div>
     </nav>
 
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
         <ul>
-            <li>
-                Funcionario A 
-            </li>
-            <li>
-                Funcionario B 
-            </li>
-            <li>
-                Funcionario C
-            </li>
+            <div class="funcionarios">
+                <li>
+                    Funcionario A 
+                </li>
+                <li>
+                    Funcionario B 
+                </li>
+                <li>
+                    Funcionario C
+                </li>
+            </div>
         </ul>
 </body>
 </html>
