--- a/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
@@ -13,9 +13,9 @@
 <body>
     <h2>For Ever 4</h2>
     <div class="container-do-search">
-        <div>
+        <div class="img2">
             <input type="text">
-            <img src="https://static.thenounproject.com/png/105498-200.png" class="icone" alt="Buscar">
+            <img src="https://static.thenounproject.com/png/105498-200.png" alt="Buscar">
         </div>
     </div>
     <div>
