--- a/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
@@ -15,7 +15,7 @@
     <div class="container-do-search">
         <div class="img">
             <input type="text">
-                <img src="https://static.thenounproject.com/png/105498-200.png" alt="Buscar">
+            <img src="https://static.thenounproject.com/png/105498-200.png" class="icone" alt="Buscar">
         </div>
     </div>
     <div>
