Projeto-portfolio terminado

--- a/modulo1/projeto-portfolio/portfolio.html
+++ b/modulo1/projeto-portfolio/portfolio.html
@@ -103,8 +103,10 @@
         <label for="banco-email"><h2>Insira seus dados para contato aqui!</h2></label>
         <input type="text" name="nome" id="nome"><button>Enviar</button>
     </div>
-    <div class="parent1">
-        SIGA PARA MAIS INFORMAÇÕES
+    <div class="footer">
+        <footer>
+            <h2>ME SIGA NAS REDES SOCIAIS PARA MAIS INFORMAÇÕES</h2>
+        </footer>
     </div>
     </div>
 </body>
