--- a/modulo1/projeto-portfolio/projeto-blackjack/index.html
+++ b/modulo1/projeto-portfolio/projeto-blackjack/index.html
@@ -22,7 +22,7 @@
   </div>
   <h3>Para voltar clique no botao abaixo</h3>
   <div class="botao">
-    <a href="/portfolio.html"><button id="back-button"> VOLTAR </button></a>
+    <a href="/index.html"><button id="back-button"> VOLTAR </button></a>
   </div>
 </body>
 
