--- a/modulo1/css-labetube/index.html
+++ b/modulo1/css-labetube/index.html
@@ -27,7 +27,7 @@
                     <a href="/video1.html">
                         <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" controls="" class="video">
                         </video>
-                        <p class="video1">Media 1</p>
+                        <p>Media 1</p>
                     </a>
                 </div>
                 <div class="videotxt">
@@ -69,8 +69,8 @@
                 </div>
                 
             </section>
-
         </section>
+        <footer><h1>Aproveite!</h1></footer>
     </div>
 </body>
 
