falta somente excluir

--- a/modulo3/LabEddit/labeddit/public/index.html
+++ b/modulo3/LabEddit/labeddit/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>LabEddit - Pétrick</title>
-  <style>
+  <!-- <style>
     html,
     body,
     #root {
@@ -33,7 +33,7 @@
       min-height: 100vh;
       font-family: 'Noto Sans', sans-serif;
     }
-  </style>
+  </style> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&display=swap" rel="stylesheet">
